Switches gear to fixed to fix layout jumping bug.

--- a/style.css
+++ b/style.css
@@ -49,7 +49,9 @@
 }
 
 #menu {
-  float: right;
+  position: fixed;
+  right: 10px;
+  top: 10px;
 }
 
 div.levelcomplete h3 {
